--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-	"name": "yimello",
-	"main": "app/ui/intro.html",
-	"window": {
-		"toolbar": true,
-		"frame": true,
-		"width": 800,
-		"height": 500,
-		"resizable": false,
-		"position": "center"
-	},
-	"devDependencies" : {
-		"grunt" : "~0.4.1",
-	    "grunt-ts" : "~1.9.2",
-	    "typescript" : "0.9.7",
-	    "grunt-contrib-copy" : "0.5.0"
-	}
+  "name": "yimello",
+  "main": "app/ui/intro.html",
+  "window": {
+    "toolbar": true,
+    "frame": true,
+    "width": 800,
+    "height": 500,
+    "resizable": false,
+    "position": "center"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-ts": "~1.9.2",
+    "typescript": "0.9.7",
+    "grunt-contrib-copy": "~0.5.0"
+  }
 }
