--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "width": 800,
     "height": 500,
     "resizable": false,
-    "position": "center"
+    "position": "center",
+    "icon" : "app/ui/assets/img/logo.png"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
