--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yimello",
+  "name": "Yimello",
   "main": "app/ui/intro.html",
   "window": {
     "toolbar": true,
@@ -14,6 +14,9 @@
     "grunt": "~0.4.1",
     "grunt-ts": "~1.9.2",
     "typescript": "0.9.7",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-remove" : "0.1.0",
+    "grunt-mkdir" : "0.1.1",
+    "grunt-node-webkit-builder" : "0.1.21"
   }
 }
