--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-remove" : "0.1.0",
     "grunt-mkdir" : "0.1.1",
-    "grunt-node-webkit-builder" : "0.1.21"
+    "grunt-node-webkit-builder" : "0.1.21",
+    "grunt-zip" : "0.15.0"
   }
 }
