--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-node-webkit-builder": "~0.1.21",
     "grunt-zip": "~0.15.0",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-csscomb": "~3.0.0"
+    "grunt-csscomb": "~3.0.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
