--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
     - "0.11"
+notifications:
+    email:
+        on_success: never
+        on_failure: always
+        
 before_install:
     - "npm install -g grunt-cli"
 install:
@@ -8,3 +13,5 @@ install:
 script:
     - "grunt ts:build --verbose --force"
     - "grunt ts:testing --verbose --force"
+    - "python testing/buildLauncher.py testing/out/output.js testing/src 0 3000 false"
+    - "node testing/out/output.js"
