--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "grunt-ts": "~1.9.3",
     "typescript": "~0.9.7",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-remove": "0.1.0",
     "grunt-mkdir": "~0.1.1",
     "grunt-node-webkit-builder": "~0.1.21",
     "grunt-zip": "~0.15.0",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-csscomb": "~3.0.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-shell": "~1.1.1"
   }
 }
